feat(ЛК): раздел настройки

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allall</title>
   </head>
-  <body class="bg-hero">
+  <body>
     <div id="preloader" class="fixed left-0 top-0 z-999999 h-screen flex items-center justify-center w-screen bg-white dark:bg-black">
       <div class="w-16 h-16 rounded-full animate-spin border-4 border-solid border-primary border-t-transparent"></div>
     </div>
-    <div id="root">
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
